--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                 <div class="second-card-container">
                     <div class="second-card">
-                        <div class="icon"><img src="images/Object 3.png" class="the-icon" width="100%"></div>
+                        <div class="icon"><img src="images/object 3.png" class="the-icon" width="100%"></div>
                         <div class="icon-text-1">Teamwork</div>
                         <div class="icon-text-3">This is a short description elaborating the service you have mentioned above.​</div>
                     </div>
@@ -71,12 +71,12 @@
                 
                 <div class="second-card-container">
                     <div class="second-card">
-                        <div class="icon"><img src="images/Object 6.png" class="the-icon" width="100%"></div>
+                        <div class="icon"><img src="images/object 6.png" class="the-icon" width="100%"></div>
                         <div class="icon-text-1">Professionalism</div>
                         <div class="icon-text-3">We maintain a high level of professionalism in all interactions with clients, employees, and partners, from communication to appearance and conduct.​</div>
                     </div>
                     <div class="second-card">
-                        <div class="icon"><img src="images/Object 7.png" class="the-icon" width="100%"></div>
+                        <div class="icon"><img src="images/object 7.png" class="the-icon" width="100%"></div>
                         <div class="icon-text-1">Adaptability</div>
                         <div class="icon-text-3">Remaining flexible and adaptable in the face of change, whether in technology, market dynamics, or client needs.​</div>
                     </div>
